--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.scau.beyondboy.dianping_client" >
-
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -23,6 +25,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".WelcomeGuideAct"
+          android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+      <activity android:name=".CityActivity"
           android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
     </application>
 
