完成首页分类信息以及条目分类显示

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
           android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
       <activity android:name=".CityActivity"
           android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+      <activity android:name=".AllCategoryActivity"
+          android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
     </application>
 
 </manifest>
