完成商品列表上下拉刷新和显示详细商品信息

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
           android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
       <activity android:name=".AllCategoryActivity"
           android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+      <activity android:name=".GoodsDetailActivity"
+          android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
     </application>
 
 </manifest>
