--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     androidTestCompile 'com.android.support:support-annotations:23.+'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.loopeer.android.thirdparty.pulltorefresh:Android-PullToRefresh:2.1.1'
     compile 'com.google.code.gson:gson:2.2.+'
 }
